# multipa

./: .gitignore  README.md  add_forvo.py  colab.ipynb  data_utils.py  full_vocab_ipa.txt  inferno.py  main.py  main_mod.py  model.ipynb  model_data.csv  model_note.py  preprocess.py  pyproject.toml  requirements.txt  res.ipynb  setup_env.sh  train_loss.ipynb  train_loss_mod.ipynb  train_loss_mod_camadas.ipynb  train_loss_mod_nfreeze.ipynb  vocab.json
converter/: english_to_ipa.py  finnish_to_ipa.py  greek_to_ipa.py  japanese_to_ipa.py  tamil_to_ipa.py
data/: full_vocab_ipa.txt  test_data.csv
gpu_test/: c2.py  check.py
src/: data_utils.py  main.py  main.py~  preprocess.py  utils.py
src/converter/: maltese_to_ipa.py
